--- a/index.html
+++ b/index.html
@@ -82,11 +82,7 @@
 									
 									<div class="ex1"><p style ="color: black";>
  <iframe src="//www.youtube.com/embed/G59mX_wqfG0?rel=0" width="100%" height="350px;"></iframe>	<br> </br>								
-These modules are designed for all incoming students who have little or no familiarity with financial accounting concepts. The Financial Accounting course is often quite challenging for such students. Our goal is to provide you with a broad familiarity of the building blocks on which almost 
-all financial accounting is built, and help ease your transition into the course. You will be expected to complete all the edX video lectures and the 
-pre-course quiz (worth 10% of your overall course grade) before our first in-class lecture on August 22. The quiz will be released in August, shortly prior 
-to the start of our in-class lectures. This is to ensure that you are properly prepared prior to the start of our in-class time. In order to assist with your learning, I have included several “knowledge checks”, which contain sample problems to reinforce your understanding of the material.
- The basics covered in these online video lectures will be reinforced and further applied during our first two days.
+NOTE: This area is incomplete. Missing course description. Please come up with one so I can add it here.
 
 
 
